# SimpleRPC

./: CMakeLists.txt  README.md  main.cpp
rpc/: Exceptions.h  Registry.cpp  Registry.h  TypeTraits.h
rpc/include/: ByteSeq.h  Exceptions.h  Functional.h  Inspector.h  Registry.h  Serializable.h  SimpleRPC.h  TypeInfo.h  TypeTraits.h  TypeWrapper.h  Variant.h
rpc/include/backend/: Backend.h  MessagePackBackend.h
rpc/include/network/: CallSite.h  InvokeProxy.h  LocalCallSite.h
rpc/src/: ByteSeq.cpp  Inspector.cpp  Registry.cpp  Serializable.cpp  TypeTraits.cpp
rpc/src/backend/: Backend.cpp  MessagePackBackend.cpp
rpc/src/network/: LocalCallSite.cpp
